--- a/sos_frontend/package.json
+++ b/sos_frontend/package.json
@@ -35,5 +35,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "tailwindcss": "^3.4.14"
+  }
 }
