--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,22 @@
     "version": 2,
     "builds": [
         {
-            "src": "index.js",
+            "src": "server/index.js",
             "use": "@vercel/node"
+        },
+        {
+            "src": "sos_frontend/build/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
+            "src": "/api/(.*)",
+            "dest": "server/index.js"
+        },
+        {
             "src": "/(.*)",
-            "dest": "index.js"
+            "dest": "sos_frontend/build/$1"
         }
     ]
 }
